[package]
name = "hylo-fix"
version = "0.3.0"
edition = "2021"
description = "Fixed-point number types with Solana Anchor support"
authors = ["0xPlish <plish@hylo.so>", "Curtis McEnroe <programble@gmail.com>"]
repository = "https://github.com/hylo-so/fix"
license = "ISC"
readme = "README.md"
keywords = ["arithmetic", "fixed-point", "crypto", "anchor", "solana"]
categories = ["data-structures"]

[lib]
name = "fix"

[dependencies]
borsh = "1.5.7"
borsh-derive = "1.5.7"
bytemuck = { version = "1.22.0", features = ["derive"] }
muldiv = "1.0.1"
num-traits = "0.2.19"
paste = "1.0.15"
typenum = { version = "1.18.0", features = ["i128"] }
